--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.9.0",
+    "@stomp/stompjs": "^7.2.0",
     "axios": "^1.12.2",
     "formik": "^2.4.6",
     "notistack": "^3.0.2",
@@ -24,6 +25,7 @@
     "react-router-dom": "^7.9.3",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@types/react-slick": "^0.23.13",
+    "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
