--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "notistack": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
     "react-slick": "^0.31.0",
