--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@stomp/stompjs": "^7.2.0",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
     "formik": "^2.4.6",
     "notistack": "^3.0.2",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-redux": "^9.2.0",
